# engine

./: .gitignore  README.md  TUTORIAL.md
4d_logic_for_windows/: CMakeLists.txt  Camera.cpp  Camera.h  Camera3D.cpp  Camera3D.h  Camera4D.cpp  Camera4D.h  Object.cpp  Object.h  Object3D.cpp  Object3D.h  Object4D.cpp  Object4D.h  README.md  Scene.cpp  Scene.h  graphics.cpp  graphics.h  utils.cpp  utils.h
inner/: BROKES.md  FOURD_INTEGRATION.md  Makefile  animation.cpp  animation.h  collision_test  custom_figures.catalog  default.scene  default_collision_test.scene  default_vect.scene  figures.cpp  figures.h  object_factory.cpp  object_factory.h  render_settings.h  scene.h  scene_loader.cpp  scene_loader.h  scene_viewer  stress_test.scene  templates.h  textures.cpp  textures.h  textures_path.cpp  transform_wrapper.cpp  transform_wrapper.h  vector.h
inner/headers/: animation.h  collision_mesh.h  collision_repr.h  figures.h  figures.h.bak  fourd_collision.h  fourd_figure.h  fourd_math.h  manual_shapes.h  object_factory.h  render_material.h  render_settings.h  scene.h  templates.h  textures.h  textures_path.h  transform_wrapper.h  vector.h
inner/source/: animation.cpp  collision_mesh.cpp  collision_repr.cpp  collision_test_main.cpp  figures.cpp  fourd_collision.cpp  fourd_figure.cpp  fourd_math.cpp  main.cpp  manual_shapes.cpp  object_factory.cpp  render_material.cpp  scene_loader.cpp  textures.cpp  textures_path.cpp  transform_wrapper.cpp
inner/tests/collision/: Makefile  collision_suite  fourd_suite  fourd_suite.cpp  impulse_suite  impulse_suite.cpp  k_axis_suite  k_axis_suite.cpp  pair_suite  pair_suite.cpp  run_suite.cpp  stress_suite  stress_suite.cpp
outer/: CMakeCache.txt  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Makefile  PreviewWidget.cpp  PreviewWidget.h  ProjectRoot.cpp  ProjectRoot.h  SceneFile.cpp  SceneFile.h  cmake_install.cmake  main.cpp  scene_editor
outer/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
outer/headers/: CustomFigures.h  MainWindow.h  PreviewWidget.h  SceneFile.h
outer/scene_editor_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
outer/scene_editor_autogen/K6S233IZAZ/: moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_PreviewWidget.cpp  moc_PreviewWidget.cpp.d
outer/source/: CustomFigures.cpp  MainWindow.cpp  PreviewWidget.cpp  SceneFile.cpp
